--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -14,4 +14,13 @@ jobs:
         uses: github/super-linter@v3
         env:
           DEFAULT_BRANCH: main
-          GITHUb_TOKEN: #{{ secrets.GITHUB_TOKEN }}
+          GITHUb_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: create string
+        run: |
+          MY_STRING="hello world"
+          echo "::set-output name=content::$MY_STRING"
+        id: my_string
+      - name: display string
+        run: |
+          echo "The string is: ${{ steps.my_string.outputs.content }}"
