--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -18,11 +18,12 @@ jobs:
 
       - name: display string
         run: |
-          echo "The string is: ${{ fromJSON(steps.my_string.outputs.content) }}"
+          array=${{ env.JUICE }}
+          echo "The string is: ${{ array }}"
 
-      - name: Add comment to PR
-        if: always()
-        uses: mshick/add-pr-comment@v2
-        with:
-          message: |
-            ${{ fromJSON(steps.my_string.outputs.content) }}
+      # - name: Add comment to PR
+      #   if: always()
+      #   uses: mshick/add-pr-comment@v2
+      #   with:
+      #     message: |
+      #       ${{ fromJSON(steps.my_string.outputs.content) }}
