--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -21,6 +21,8 @@ jobs:
           array: ${{ steps.my_string.outputs.content }}
         run: |
           echo "The string is: $array"
+          for item in ${array[*]}
+            echo "$item"
 
       # - name: Add comment to PR
       #   if: always()
