--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -18,11 +18,9 @@ jobs:
 
       - name: display string
         # if: github.event_name != 'pull_request'
-        env:
-          array: ${{ steps.my_string.outputs.content }}
-        run: |
-          echo "The string is: $array"
-          echo "The string is: ${{ github.event_number }}"
+        # env:
+        #   array: ${{ steps.my_string.outputs.content }}
+        run: echo ${{ github.event.number }}
 
       # - name: Add comment to PR
       #   if: always()
