--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -17,9 +17,9 @@ jobs:
         id: my_string
 
       - name: display string
-        # if: github.event_name != 'pull_request'
-        # env:
-        #   array: ${{ steps.my_string.outputs.content }}
+        if: github.event.number != ''
+        env:
+          array: ${{ steps.my_string.outputs.content }}
         run: echo ${{ github.event.number }}
 
       # - name: Add comment to PR
