--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,6 +1,6 @@
 name: Super-Linter
 
-on: [push, pull_request]
+on: push
 
 jobs:
   super-lint:
@@ -17,7 +17,7 @@ jobs:
         id: my_string
 
       - name: display string
-        run: echo ${{ join(fromJSON(steps.my_string.outputs.content), '|') }}
+        run: echo ${{ join(fromJSON(steps.my_string.outputs.content), '| ') }}
 
       # - name: Add comment to PR
       #   if: always()
