--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: create string
         run: |
-          MY_STRING="https://test2.html","https://test1.html","https://test.html"
+          MY_STRING=["https://test2.html","https://test1.html","https://test.html"]
           echo "::set-output name=content::$MY_STRING"
         id: my_string
 
@@ -23,7 +23,7 @@ jobs:
       - name: Add comment to PR
         if: always()
         env:
-          array: ${{ fromJSON(steps.my_string.outputs.content) }}
+          array: ${{ steps.my_string.outputs.content }}
         uses: mshick/add-pr-comment@v2
         with:
           message: |
